--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 <script>
     function timer() {
-        var start = new Date(2017, 2, 24); // 2015.7.2
+        var start = new Date(2017, 2, 24); 
         var t = new Date() - start;
         var h = ~~(t / 1000 / 60 / 60 % 24);
         if (h < 10) {
